# Technical_TMS_Nov-V9

./: README.md  pyproject.toml  requirements.txt  start.sh
static/: tms.css
static/css/: tms-premium.css
templates/: 403.html  404.html  500.html  base.html  login.html
templates/admin/: base_site.html
templates/timetable/: account_settings.html  all_schedules_admin.html  analytics_dashboard.html  branches.html  change_password.html  changelog.html  changelog_restore.html  cm_academic_period_setup.html  cm_academic_periods.html  cm_courses.html  cm_departments.html  cm_dept_head_add.html  cm_dept_heads.html  cm_halls.html  cm_instructors.html  cm_lab_add.html  cm_lab_schedule.html  cm_lecture_add.html  cm_lecture_schedule.html  cm_notifications.html  cm_report_professor.html  cm_report_room.html  cm_request_review.html  cm_requests.html  cm_requests_table.html  cm_rooms.html  cm_specializations.html  cm_students.html  college_manager_dashboard.html  colleges.html  confirm_delete.html  edit_profile.html  export_import.html  form.html  halls_admin.html  notifications_center.html  professor_notifications.html  professor_request_add.html  professor_requests.html  professor_schedule.html  (+7 more)
timetable/: admin.py  backends.py  forms.py  models.py  urls.py  views.py  views_analytics.py  views_extras.py
timetable/management/commands/: seed_admin.py  seed_data.py
timetable/migrations/: 0001_initial.py  0002_add_changelog_and_notification_read.py  0003_add_performance_indexes.py
timetable/templatetags/: timetable_tags.py
tms/: settings.py  urls.py
